# gimpsep-team-1

./: .gitignore  CMakeLists.txt  EditorFrame.cpp  EditorFrame.h  EditorPanel.cpp  EditorPanel.h  GimpFrame.cpp  GimpFrame.h  GimpIsep.cpp  GimpIsep.h  MainFrame.cpp  MainFrame.h  Manipulation.cpp  Manipulation.h  MenuFrame.cpp  MenuFrame.h  MenuPanel.cpp  MenuPanel.h  MyMenuBar.cpp  MyMenuBar.h  StitchFrame.h  StitchPanel.cpp  StitchPanel.h  StitcherFrame.cpp  StitcherFrame.h  main.cpp
